--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-videoeditorsdk" version="1.1.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-videoeditorsdk" version="2.0.0">
     <name>VideoEditorSDK</name>
     <description>A Cordova plugin for VideoEditor SDK. Integrate the video editor into your own HTML5, iOS or Android app - in minutes!</description>
-    <license>MIT</license>
-    <keywords>ecosystem:cordova,cordova-android,cordova-ios,cordova,video,video editor,videoeditor,videoeditorsdk,VideoEditor SDK,SDK,ios,android</keywords>
+    <license>BSD-3-Clause</license>
+    <keywords>cordova,cordova-android,cordova-ios,video,video editor,videoeditor,videoeditorsdk,VideoEditor SDK,SDK,ios,android</keywords>
     <repo>https://github.com/imgly/vesdk-cordova.git</repo>
-    <author>img.ly GmbH,contact@img.ly</author>
+    <author>img.ly GmbH, contact@img.ly</author>
+
     <engines>
-        <engine name="cordova-ios" version=">=4.3.0"/>
+        <engine name="cordova" version=">=9.0.0"/>
+        <engine name="cordova-ios" version=">5.0.0"/>
+        <engine name="cordova-android" version=">=9.0.0"/>
     </engines>
 
     <js-module src="www/videoeditorsdk.js" name="VESDK">
