--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cordova-plugin-videoeditorsdk",
     "description": "A Cordova plugin for VideoEditor SDK. Integrate the video editor into your own HTML5, iOS or Android app - in minutes!",
-    "version": "3.3.0",
+    "version": "3.4.0",
     "types": "./types/index.d.ts",
     "main": "www/videoeditorsdk.js",
     "scripts": {
@@ -34,7 +34,7 @@
     },
     "homepage": "https://www.videoeditorsdk.com",
     "author": {
-        "name": "img.ly GmbH",
+        "name": "IMG.LY GmbH",
         "email": "contact@img.ly"
     },
     "license": "BSD-3-Clause",
