--- a/plugin.xml
+++ b/plugin.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-videoeditorsdk" version="3.3.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-videoeditorsdk" version="3.4.0">
     <name>VideoEditorSDK</name>
     <description>A Cordova plugin for VideoEditor SDK. Integrate the video editor into your own HTML5, iOS or Android app - in minutes!</description>
     <license>BSD-3-Clause</license>
     <keywords>cordova,cordova-android,cordova-ios,video,video editor,videoeditor,videoeditorsdk,VideoEditor SDK,SDK,ios,android</keywords>
     <repo>https://github.com/imgly/vesdk-cordova.git</repo>
-    <author>img.ly GmbH, contact@img.ly</author>
+    <author>IMG.LY GmbH, contact@img.ly</author>
 
     <engines>
         <engine name="cordova" version=">=9.0.0"/>
@@ -68,7 +68,7 @@
                 <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="VideoEditorSDK" spec="~> 10.30"/>
+                <pod name="VideoEditorSDK" spec="~> 11.8"/>
             </pods>
         </podspec>
     </platform>
