--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'ly.img.android.sdk'
 apply plugin: 'kotlin-android'
 
 // Configure the VESDKPlugin
-imglyConfig {
+IMGLY.predefine {
     vesdk {
         enabled true
     }
